--- a/IoTBook/mkdocs.yml
+++ b/IoTBook/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
         - rust
         - matlab
     language: 'zh'
-    logo: 'images/cbd47-7mlgx-001.ico'
+    logo: 'images/nicon.png'
 
 extra:
   social:
@@ -63,14 +63,14 @@ nav:
 
 
 
-  - 四. 物联网网络协议: 
+  - 四. 物联网网络协议:
       - 4.1 物联网连接技术: IoTBook/3. 物联网通信协议/物联网连接技术.md
       - 4.2 蓝牙连接实验: IoTBook/3. 物联网通信协议/蓝牙实验.md
       - 4.3 LoRa编码和通信实验: IoTBook/3. 物联网通信协议/LoRa编码和通信实验.md
 
 
 
-  - 五. 物联网通信基础: 
+  - 五. 物联网通信基础:
       - 5.1 物联网基础概念: IoTBook/4. 物联网通信基础/4.1 物联网基础概念.md
         # - 5.1.1 量化、采样及采样定律: IoTBook/4. 物联网通信基础/4.1 物联网基础概念.md
         # - 5.1.2 滤波: IoTBook/4. 物联网通信基础/4.1.3 滤波.md
@@ -111,7 +111,7 @@ nav:
         - 7.2.3 基于相位的定位: IoTBook/6. 定位与追踪应用/LLAP/LLAP实现.md
       - 7.3 追踪技术:
         - 7.3.1 基于距离变化量的位置追踪: IoTBook/6. 定位与追踪应用/7.3基于距离变化量的位置追踪.md
-        
+
 
 
 
@@ -129,6 +129,7 @@ nav:
         - 8.3.2 声纹识别: IoTBook/404.md
 
   - 九. 物联网综合应用平台:
-      - 9.1 阿里云平台: IoTBook/10. 物联网应用平台/阿里云平台/阿里云物联网平台介绍.md
-      - 9.2 LoRa测试床: IoTBook/10. 物联网应用平台/LoRa测试床/LoRa测试床.md
-      - 9.3 物联网开发: IoTBook/10. 物联网应用平台/物联网开发/物联网开发.md
+      - 9.1 定位感知: IoTBook/5.物联网感知/定位感知实验.md
+      - 9.2 阿里云平台: IoTBook/10. 物联网应用平台/阿里云平台/阿里云物联网平台介绍.md
+      - 9.3 LoRa测试床: IoTBook/10. 物联网应用平台/LoRa测试床/LoRa测试床.md
+      - 9.4 物联网开发: IoTBook/10. 物联网应用平台/物联网开发/物联网开发.md
