--- a/IoTBook/mkdocs.yml
+++ b/IoTBook/mkdocs.yml
@@ -65,17 +65,24 @@ nav:
 
   - 四. 物联网网络协议:
       - 4.1 物联网连接技术: IoTBook/3. 物联网通信协议/物联网连接技术.md
-      - 4.2 蓝牙连接实验: IoTBook/3. 物联网通信协议/蓝牙实验.md
-      - 4.3 LoRa编码和通信实验: IoTBook/3. 物联网通信协议/LoRa编码和通信实验.md
+      - 4.2 Wi-Fi无线局域网: IoTBook/3. 物联网通信协议/4.2 Wi-Fi无线局域网.md
+      - 4.3 蓝牙: IoTBook/3. 物联网通信协议/4.3 蓝牙.md
+      - 4.4 ZigBee: IoTBook/3. 物联网通信协议/4.4 ZigBee.md
+      - 4.5 毫米波通信: IoTBook/3. 物联网通信协议/4.5 毫米波通信.md
+      - 4.6 可见光通信: IoTBook/3. 物联网通信协议/4.6 可见光通信.md
+      - 4.7 低功耗广域网: IoTBook/3. 物联网通信协议/4.7 低功耗广域网.md
+      - 4.8 蓝牙连接实验: IoTBook/3. 物联网通信协议/蓝牙实验.md
+      - 4.9 LoRa编码和通信实验: IoTBook/3. 物联网通信协议/LoRa编码和通信实验.md
 
 
 
   - 五. 物联网通信基础:
-      - 5.1 物联网基础概念: IoTBook/4. 物联网通信基础/4.1 物联网基础概念.md
-        # - 5.1.1 量化、采样及采样定律: IoTBook/4. 物联网通信基础/4.1 物联网基础概念.md
-        # - 5.1.2 滤波: IoTBook/4. 物联网通信基础/4.1.3 滤波.md
-        # - 5.1.3 傅立叶分析: IoTBook/4. 物联网通信基础/4.1.2 傅里叶分析.md
-      - 5.2 调制解调方法: IoTBook/4. 物联网通信基础/4.2 调制解调方法及其声音实现.md
+    #   - 5.1 物联网基础概念: IoTBook/4. 物联网通信基础/4.1 物联网基础概念.md
+      - 5.1 采样和量化: IoTBook/4. 物联网通信基础/5.1 采样和量化.md
+      - 5.2 傅立叶分析: IoTBook/4. 物联网通信基础/5.2 傅立叶分析.md
+      - 5.3 无线信道: IoTBook/4. 物联网通信基础/5.3 无线信道.md
+      - 5.4 信号滤波: IoTBook/4. 物联网通信基础/5.4 滤波.md
+      - 5.5 调制解调方法: IoTBook/4. 物联网通信基础/4.2 调制解调方法及其声音实现.md
         # - 5.2.1 脉冲、幅度、时间、频率编码: IoTBook/4. 物联网通信基础/4.2 调制解调方法及其声音实现.md
         # - 5.2.2 相位编码、OFDM与载波调制: IoTBook/4. 物联网通信基础/4.2 调制解调方法及其声音实现-2.md
 
@@ -85,7 +92,7 @@ nav:
       - 6.1 低功耗物联网:
         - 6.1.1 概述: IoTBook/8. 物联网网络构建/8.1 低功耗物联网概述.md
         - 6.1.2 低占空比网络: IoTBook/8. 物联网网络构建/8.1.1 低占空比网络.md
-        - 6.1.3 低功耗广域网: IoTBook/8. 物联网网络构建/8.1.2 低功耗广域网.md
+        # - 6.1.3 低功耗广域网: IoTBook/8. 物联网网络构建/8.1.2 低功耗广域网.md
       - 6.2 多跳自组织网: IoTBook/8. 物联网网络构建/8.5 物联网多跳自组网网络协议.md
       - 6.3 网络冲突处理:
         - 6.3.1 概述: IoTBook/8. 物联网网络构建/8.2 网络冲突处理.md
