--- a/IoTBook/mkdocs.yml
+++ b/IoTBook/mkdocs.yml
@@ -89,8 +89,8 @@ nav:
 
 
   - 六. 物联网网络构建技术:
-      - 6.1 低功耗物联网: IoTBook/8. 物联网网络构建/8.1 低功耗物联网概述.md
-      - 6.2 多跳自组织网: IoTBook/8. 物联网网络构建/8.5 物联网多跳自组网网络协议.md
+      - 6.1 物联网组网技术: IoTBook/8. 物联网网络构建/8.5 物联网多跳自组网网络协议.md
+      - 6.2 低占空比网络: IoTBook/8. 物联网网络构建/8.1 低功耗物联网概述.md
       - 6.3 网络冲突处理:
         - 6.3.1 链路模型及网络容量: IoTBook/8. 物联网网络构建/8.2.1 链路模型及网络容量.md
         - 6.3.2 网络冲突处理方法: IoTBook/8. 物联网网络构建/8.2 网络冲突处理.md
@@ -111,24 +111,28 @@ nav:
       - 7.3 身份认证:
         - 7.3.1 频率选择: IoTBook/404.md
         - 7.3.2 声纹识别: IoTBook/404.md
+      - 7.4 定位与追踪:
+        - 7.4.1 无线测距: IoTBook/5.物联网感知/定位与追踪/无线测距.md
+        - 7.4.2 定位技术: IoTBook/5.物联网感知/定位与追踪/定位技术.md
+        - 7.4.3 追踪技术: IoTBook/5.物联网感知/定位与追踪/追踪技术.md
 
 
-  - 八. 物联网定位与追踪:
-      - 8.1 无线测距:
-        - 8.1.1 信号强度测距: IoTBook/6. 定位与追踪应用/信号强度测距.md
-        - 8.1.2 飞行时间测距: IoTBook/6. 定位与追踪应用/飞行时间.md
-        - 8.1.3 多普勒效应测距: IoTBook/6. 定位与追踪应用/多普勒效应.md
-        - 8.1.4 FMCW测距: IoTBook/6. 定位与追踪应用/FMCW.md
-      - 8.2 定位技术:
-        - 8.2.1 基于距离测量的定位: IoTBook/6. 定位与追踪应用/7.1基于距离测量的定位.md
-        - 8.2.2 基于信号分布特征的定位: IoTBook/6. 定位与追踪应用/7.2基于信号分布特征的定位.md
-      - 8.3 追踪技术:
-        - 8.3.1 基于距离变化量的位置追踪: IoTBook/6. 定位与追踪应用/7.3基于距离变化量的位置追踪.md
-        - 8.3.2 基于相位的追踪: IoTBook/6. 定位与追踪应用/LLAP/LLAP实现.md
+  # - 八. 物联网定位与追踪: 
+  #     - 8.1 无线测距:
+  #       - 8.1.1 信号强度测距: IoTBook/6. 定位与追踪应用/信号强度测距.md
+  #       - 8.1.2 飞行时间测距: IoTBook/6. 定位与追踪应用/飞行时间.md
+  #       - 8.1.3 多普勒效应测距: IoTBook/6. 定位与追踪应用/多普勒效应.md
+  #       - 8.1.4 FMCW测距: IoTBook/6. 定位与追踪应用/FMCW.md
+  #     - 8.2 定位技术:
+  #       - 8.2.1 基于距离测量的定位: IoTBook/6. 定位与追踪应用/7.1基于距离测量的定位.md
+  #       - 8.2.2 基于信号分布特征的定位: IoTBook/6. 定位与追踪应用/7.2基于信号分布特征的定位.md
+  #     - 8.3 追踪技术:
+  #       - 8.3.1 基于距离变化量的位置追踪: IoTBook/6. 定位与追踪应用/7.3基于距离变化量的位置追踪.md
+  #       - 8.3.2 基于相位的追踪: IoTBook/6. 定位与追踪应用/LLAP/LLAP实现.md
 
 
-  - 九. 物联网综合应用平台:
-      - 9.1 定位感知: IoTBook/5.物联网感知/定位感知实验.md
-      - 9.2 阿里云平台: IoTBook/10. 物联网应用平台/阿里云平台/阿里云物联网平台介绍.md
-      - 9.3 LoRa测试床: IoTBook/10. 物联网应用平台/LoRa测试床/LoRa测试床.md
-      - 9.4 物联网开发: IoTBook/10. 物联网应用平台/物联网开发/物联网开发.md
+  - 八. 物联网综合应用平台:
+      - 8.1 定位感知: IoTBook/5.物联网感知/定位感知实验.md
+      - 8.2 阿里云平台: IoTBook/10. 物联网应用平台/阿里云平台/阿里云物联网平台介绍.md
+      - 8.3 LoRa测试床: IoTBook/10. 物联网应用平台/LoRa测试床/LoRa测试床.md
+      - 8.4 物联网开发: IoTBook/10. 物联网应用平台/物联网开发/物联网开发.md
