--- a/IoTBook/mkdocs.yml
+++ b/IoTBook/mkdocs.yml
@@ -108,9 +108,7 @@ nav:
       - 7.2 行为识别:
         - 7.2.1 Wi-Fi 动作识别: IoTBook/404.md
         - 7.2.2 智能手表手势识别: IoTBook/5.物联网感知/智能手表手势识别/智能手表连接教程/智能手表连接教程.md
-      - 7.3 身份认证:
-        - 7.3.1 频率选择: IoTBook/404.md
-        - 7.3.2 声纹识别: IoTBook/404.md
+      - 7.3 身份认证:  IoTBook/5.物联网感知/身份识别/频率选择.md
       - 7.4 定位与追踪:
         - 7.4.1 无线测距: IoTBook/5.物联网感知/定位与追踪/无线测距.md
         - 7.4.2 定位技术: IoTBook/5.物联网感知/定位与追踪/定位技术.md
