--- a/IoTBook/mkdocs.yml
+++ b/IoTBook/mkdocs.yml
@@ -134,3 +134,4 @@ nav:
       - 8.2 阿里云平台: IoTBook/10. 物联网应用平台/阿里云平台/阿里云物联网平台介绍.md
       - 8.3 LoRa测试床: IoTBook/10. 物联网应用平台/LoRa测试床/LoRa测试床.md
       - 8.4 物联网开发: IoTBook/10. 物联网应用平台/物联网开发/物联网开发.md
+      - 8.5 MQTT+数据持久化: IoTBook/10. 物联网应用平台/MQTT+数据持久化/MQTT.md
